<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/matchRequest_backBtn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:contentDescription="Back Button"
        android:scaleType="fitCenter"
        android:src="@drawable/chevron_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#000000" />

    <TextView
        android:id="@+id/matchRequest_titleTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Pickup Match Requests"
        android:textColor="#000000"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/matchRequest_backBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/matchRequest_titleBorder"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/matchRequest_titleTxt" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/matchRequest_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/matchRequest_titleBorder" />
</androidx.constraintlayout.widget.ConstraintLayout>