<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/multiple_view_team_createTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Create Team"
        app:layout_constraintBottom_toTopOf="@+id/navbarDivider6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/navbarBg8"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/navbarDivider6"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="22dp"
        android:background="#4D4E4E"
        app:layout_constraintBottom_toTopOf="@+id/multiple_view_team_homePageButton2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/homePgIconSelector5"
        android:layout_width="45dp"
        android:layout_height="2dp"
        android:layout_marginStart="133dp"
        android:layout_marginBottom="18dp"
        android:background="#6558F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/multiple_view_team_homePageButton2"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Home Button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_home" />

    <ImageButton
        android:id="@+id/multiple_view_team_teamPageButton2"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Team Page Button"
        android:scaleType="fitCenter"
        app:tint="#6558F5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/multiple_view_team_homePageButton2"
        app:srcCompat="@drawable/ic_teams" />

    <ImageButton
        android:id="@+id/multiple_view_team_profilePageButton2"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:contentDescription="Profile Page Button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/multiple_view_team_teamPageButton2"
        app:srcCompat="@drawable/ic_profile" />

    <ImageButton
        android:id="@+id/multiple_view_team_settingsPageButton2"
        android:layout_width="69dp"
        android:layout_height="56dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="Settings Page Button"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/settings"
        app:tint="#4D4E4E" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/multipleTeamRecyclerView"
        android:layout_width="391dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/multiple_view_team_createTeamBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Your Teams"
        android:textColor="#000000"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/multiple_view_team_joinTeamBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Join Team"
        app:layout_constraintBottom_toTopOf="@+id/navbarDivider6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.829"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>